@startuml
skinparam class {
  BackgroundColor #FAFAFA
  BorderColor #555
}
skinparam shadowing false
left to right direction

package "Authentication" {
  class User {
    +id: bigint {id}
    +uuid: uuid {unique} {index}
    +name: string
    +username: string {unique}
    +email: string {unique}
    +profile_photo: string {nullable}
    +email_verified_at: timestamp {nullable}
    +password: string
    +role: enum('admin','mitra','member') = 'member'
    +last_seen_at: timestamp {nullable}
    +remember_token: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }

  class OtpToken {
    +id: bigint {id}
    +email: string {fk users.email}
    +otp: string {nullable}
    +expires_at: timestamp {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }

  class PasswordResetToken {
    +email: string {id}
    +token: string
    +created_at: timestamp {nullable}
  }

  class PersonalAccessToken {
    +id: bigint {id}
    +tokenable_type: string
    +tokenable_id: bigint
    +name: string
    +token: string(64) {unique}
    +abilities: text {nullable}
    +last_used_at: timestamp {nullable}
    +expires_at: timestamp {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Profile/Partner" {
  class Addresses {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +label: string {nullable}
    +recipient_name: string
    +phone: string(20)
    +address_line: text
    +city: string {nullable}
    +province: string {nullable}
    +district: string {nullable}
    +postal_code: string(10) {nullable}
    +note: text {nullable}
    +is_default: boolean = false
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Mitra {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +address: text
    +npwp_number: string(20)
    +npwp_file_path: string
    +business_file_path: string
    +description: text
    +status: enum('pending','approved','rejected') = 'pending'
    +is_verified: boolean = false
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Leave {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +item_id: bigint
    +item_type: string
    +date: date {nullable}
    +day_of_week: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Catalog" {
  class Event {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +name: string
    +description: text {nullable}
    +event_mode: enum('Offline','Google Meet','Zoom') = 'Offline'
    +location: string {nullable}
    +pin: string {nullable}
    +link_meeting: string {nullable}
    +thumbnail: string {nullable}
    +event_date_start: datetime
    +event_date_end: datetime
    +ticket_date_start: datetime
    +ticket_date_end: datetime
    +status: enum('active','inactive','banned','completed') = 'active'
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Speaker {
    +id: bigint {id}
    +event_id: bigint {fk events.id}
    +name: string
    +photo: string
    +description: string
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Ticket {
    +id: bigint {id}
    +event_id: bigint {fk events.id}
    +name: string
    +price: int
    +quota: int
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Service {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +name: string
    +thumbnail: string {nullable}
    +description: text {nullable}
    +location: string {nullable}
    +price: int = 0
    +status: enum('active','inactive','banned','completed') = 'active'
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Building {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +name: string
    +location: string {nullable}
    +description: text {nullable}
    +thumbnail: string {nullable}
    +pin: string {nullable}
    +capacity: string {nullable}
    +price: int = 0
    +status: enum('active','inactive','banned','completed') = 'active'
    +created_at: timestamp
    +updated_at: timestamp
  }

  class RentProperty {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +name: string
    +location: string
    +description: text {nullable}
    +delivered: boolean = false
    +picked_up: boolean = false
    +price: int = 0
    +pin: string {nullable}
    +thumbnail: string {nullable}
    +status: enum('active','inactive','banned','completed') = 'active'
    +created_at: timestamp
    +updated_at: timestamp
  }

  class ItemPhoto {
    +id: bigint {id}
    +item_id: bigint
    +item_type: string
    +photo: string
    +caption: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Order" {
  class Cart {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +item_id: bigint
    +item_type: string
    +rent_days: date {nullable}
    +type: string
    +delivery_type: enum('delivery','pickup') {nullable}
    +is_unavailable: string = 'available'
    +item_qty: int = 1
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Transaction {
    +id: bigint {id}
    +user_id: bigint {fk users.id} {index}
    +order_id: string {unique}
    +redirect_url: string
    +status: string = 'pending' {index}
    +token: string
    +total: decimal(15,2) = 0
    +expired_at: datetime {nullable}
    +payment_type: string {nullable}
    +va_number: string {nullable}
    +bank_name: string {nullable}
    +bill_key: string {nullable}
    +biller_code: string {nullable}
    +discount: string {nullable}
    +tax: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }

  class TransactionAddress {
    +id: bigint {id}
    +transaction_id: bigint {fk transactions.id} {index}
    +user_id: bigint {fk users.id} {index}
    +recipient_name: string
    +phone: string(20)
    +address_line: text
    +city: string {nullable}
    +province: string {nullable}
    +postal_code: string(10) {nullable}
    +note: text {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }

  class TransactionItem {
    +id: bigint {id}
    +transaction_id: bigint {fk transactions.id} {index}
    +item_id: bigint {index}
    +item_type: string
    +type: string
    +qty: int = 1
    +price: int
    +rent_days: date {nullable}
    +note: text {nullable}
    +delivery_type: enum('delivery','pickup') {nullable}
    +delivery_fee: int {nullable} = 0
    +delivery_fee_status: string = 'pending'
    +reviews_id: bigint {nullable} {index}
    +note_admin: text {nullable}
    +status: string = 'pending'
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Payment" {
  ' Payment data primarily resides in Transaction/TransactionItem (Order package)
}

package "Review" {
  class Review {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +transaction_item_id: bigint {fk transaction_items.id}
    +item_id: int
    +item_type: string
    +rating: int
    +comment: text {nullable}
    +created_at: timestamp
    +updated_at: timestamp
    -- constraints --
    +UNIQUE(user_id, transaction_item_id)
  }
}

package "Chat" {
  class Chat {
    +id: bigint {id}
    +sender_id: bigint {fk users.id}
    +receiver_id: bigint {fk users.id}
    +reply_id: bigint {fk chats.id} {nullable}
    +message: text
    +seen_at: timestamp {nullable}
    +message_deleted_at: timestamp {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Moderation" {
  class AdminSetting {
    +id: bigint {id}
    +site_name: string = 'Event Organizer'
    +logo: string {nullable}
    +currency: string(10) = 'IDR'
    +payment_time: int = 60
    +tax_type: enum('percent','fixed') = 'percent'
    +tax_value: decimal(10,2) = 0
    +contact_email: string {nullable}
    +contact_phone: string {nullable}
    +address: text {nullable}
    +about_us: text {nullable}
    +seo_title: string(60) {nullable}
    +seo_description: text {nullable}
    +seo_keywords: string {nullable}
    +seo_image: string {nullable}
    +seo_twitter_card: enum('summary','summary_large_image') = 'summary'
    +seo_og_type: enum('website','article') = 'website'
    +seo_canonical_url: string {nullable}
    +seo_robots: enum('index','follow','noindex','nofollow') = 'index'
    +seo_author: string {nullable}
    +seo_publisher: string {nullable}
    +maintenance_mode: boolean = false
    +created_at: timestamp
    +updated_at: timestamp
  }

  class Testimonial {
    +id: bigint {id}
    +author_name: string
    +author_title: string
    +quote: text
    +star_rating: int = 5
    +author_image_url: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Notification" {
  class Notification {
    +id: uuid {id}
    +type: string
    +notifiable_type: string
    +notifiable_id: bigint
    +data: text
    +read_at: timestamp {nullable}
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Payout" {
  class Wallet {
    +id: bigint {id}
    +user_id: bigint {fk users.id} {unique}
    +balance: decimal(15,2) = 0
    +created_at: timestamp
    +updated_at: timestamp
  }

  class WalletTransaction {
    +id: bigint {id}
    +wallet_id: bigint {fk wallets.id}
    +user_id: bigint {fk users.id}
    +amount: decimal(15,2)
    +type: enum('CREDIT','DEBIT')
    +reference_type: string {nullable}
    +reference_id: bigint {nullable}
    +description: string {nullable}
    +created_at: timestamp
    +updated_at: timestamp
    -- indexes --
    +INDEX(user_id, type)
    +INDEX(reference_type, reference_id)
  }

  class Withdraw {
    +id: bigint {id}
    +user_id: bigint {fk users.id}
    +amount: decimal(10,2)
    +method: string
    +account_holder_name: string
    +account_number: string
    +proof: string {nullable}
    +other_method: string {nullable}
    +status: enum('pending','completed','rejected','cancelled') = 'pending'
    +created_at: timestamp
    +updated_at: timestamp
  }
}

package "Analytics" {
  class FailedJob {
    +id: bigint {id}
    +uuid: string {unique}
    +connection: text
    +queue: text
    +payload: longtext
    +exception: longtext
    +failed_at: timestamp
  }
}

' ===========================
' Relationships (FK & polymorphic)
' ===========================

' Authentication
User "1" o-- "0..*" OtpToken : email {fk}
User "1" o-- "0..*" PersonalAccessToken : tokenable (morph)
PersonalAccessToken ..> User : tokenable {morph}

' Profile/Partner
User "1" o-- "0..*" Addresses : user_id
User "1" o-- "0..*" Mitra : user_id
User "1" o-- "0..*" Leave : user_id

' Catalog
User "1" o-- "0..*" Event : user_id
User "1" o-- "0..*" Service : user_id
User "1" o-- "0..*" Building : user_id
User "1" o-- "0..*" RentProperty : user_id

Event "1" o-- "0..*" Speaker : event_id
Event "1" o-- "0..*" Ticket : event_id

Service "1" o-- "0..*" ItemPhoto : item_id\n{polymorphic item_type=Service}
Building "1" o-- "0..*" ItemPhoto : item_id\n{polymorphic item_type=Building}
RentProperty "1" o-- "0..*" ItemPhoto : item_id\n{polymorphic item_type=RentProperty}

' Order
User "1" o-- "0..*" Cart : user_id
Cart ..> Service : {polymorphic}
Cart ..> Building : {polymorphic}
Cart ..> RentProperty : {polymorphic}
Cart ..> Ticket : {polymorphic}

User "1" o-- "0..*" Transaction : user_id
Transaction "1" o-- "0..*" TransactionItem : transaction_id
Transaction "1" o-- "0..1" TransactionAddress : transaction_id

TransactionItem ..> Service : {polymorphic item}
TransactionItem ..> Building : {polymorphic item}
TransactionItem ..> RentProperty : {polymorphic item}
TransactionItem ..> Ticket : {polymorphic item}

TransactionAddress "1" --> "1" User : user_id

' Review
User "1" o-- "0..*" Review : user_id
Review "1" --> "1" TransactionItem : transaction_item_id
Review ..> Service : {polymorphic item}
Review ..> Building : {polymorphic item}
Review ..> RentProperty : {polymorphic item}
Review ..> Ticket : {polymorphic item}

' Chat
User "1" o-- "0..*" Chat : sender_id
User "1" o-- "0..*" Chat : receiver_id
Chat "0..*" --> "0..1" Chat : reply_id (balasan)

' Notification
Notification ..> User : notifiable {morph}

' Payout
User "1" o-- "0..1" Wallet : user_id {unique}
Wallet "1" o-- "0..*" WalletTransaction : wallet_id
User "1" o-- "0..*" WalletTransaction : user_id
User "1" o-- "0..*" Withdraw : user_id

' Profile/Partner Availability links (polymorphic)
Leave ..> Service : {polymorphic item}
Leave ..> Building : {polymorphic item}
Leave ..> RentProperty : {polymorphic item}

@enduml